color minor adjustment

--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@ $(document).ready(function () {
 <p><font size="4"> Yuchen Zhang is an assistant professor at <span
 style="color:green">Tulane University</span>, and an alumnus of the
 <span style="color:darkblue">Pennsylvania State University</span> and
-the <span style="color:orange">University of Colorado
+the <span style="color:darkgoldenrod">University of Colorado
 Boulder</span>.</p>
-<p><a href="https://www.dropbox.com/s/opx6zx1u9nt950l/YuchenZhang_CV.pdf?dl=0" style="color:blue">Curriculum
+<p><a href="https://www.dropbox.com/s/opx6zx1u9nt950l/YuchenZhang_CV.pdf?dl=0">Curriculum
 Vitae</a> </font></p>
 <!-- Default Statcounter code for github_personal_site
 https://yz81.github.io/ -->
