--- a/Research.html
+++ b/Research.html
@@ -303,9 +303,9 @@ and innovation.</p>
 Alphabetical Order). (Forthcoming) “High” Innovators? Marijuana
 Legalization and Regional Innovation. Production and Operations
 Management.</p>
-<p>Zhang, Y., and W. Yang. (Forthcoming) Breakthrough Invention and
-Problem Complexity: Evidence from a Quasi-Experiment. Strategic
-Management Journal.</p>
+<p>Zhang, Y., and W. Yang. (2022) Breakthrough Invention and Problem
+Complexity: Evidence from a Quasi-Experiment. Strategic Management
+Journal, 43(12), 2510-2544.</p>
 <p>Zhang, Y., J. Li, and T. Tong. (2022) How Platform Gatekeeping
 Affects Knowledge Sharing among Complementors. Strategic Management
 Journal, 43(3), 599-626.</p>
@@ -338,8 +338,6 @@ Management Journal)</p>
 <p>Zhang, Y., H. Jiang, and J. Jiao. Technical Information Disclosure in
 Crowdfunding Project Descriptions. (Under the 2nd round revise and
 resubmit at Entrepreneurship Theory &amp; Practice)</p>
-<p><br />
-</p>
 </div>
 
 
