--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><font size="4"> Yuchen Zhang is an assistant professor at <span
+<p><font size="4"> Yuchen Zhang is an associate professor (with tenure) at <span
 style="color:green">Tulane University</span>, and an alumnus of the
 <span style="color:darkblue">Pennsylvania State University</span> and
 the <span style="color:darkgoldenrod">University of Colorado
