--- a/Research.html
+++ b/Research.html
@@ -299,10 +299,14 @@ and innovation.</p>
 </div>
 <div id="refereed-publications" class="section level3">
 <h3>Refereed Publications</h3>
+<p>H. Jiang, Y. Zhang, and J. Jiao. A Recombinant Framework of
+Technological Information Disclosure and Reward-Based Crowdfunding
+Performance of Technology Projects. (Forthcoming) Entrepreneurship
+Theory &amp; Practice.</p>
 <p>Cheng, S.F., P. Lin, Y. Tan, and Y. Zhang (Equal Contribution and
 Alphabetical Order). (Forthcoming) “High” Innovators? Marijuana
 Legalization and Regional Innovation. Production and Operations
-Management.</p>
+Management, 32(3), 685-703.</p>
 <p>Zhang, Y., and W. Yang. (2022) Breakthrough Invention and Problem
 Complexity: Evidence from a Quasi-Experiment. Strategic Management
 Journal, 43(12), 2510-2544.</p>
@@ -332,14 +336,9 @@ insights. Journal of Economics and Management Strategy, 27(3),
 <h3>Working Papers and Work-in-progress</h3>
 <p>Han, N., Y. Zhang, and T. Tong. Appropriability Risk and Knowledge
 Search. (Under review at Research Policy)</p>
-<p>Zhong, W., X. Yi, Z. Ma, and Y. Zhang. Female-inclusive TMT and Firm
-Innovation. (Under the 1st round revise and resubmit at Strategic
-Management Journal)</p>
-<p>Zhang, Y., H. Jiang, and J. Jiao. Technical Information Disclosure in
-Crowdfunding Project Descriptions. (Under the 2nd round revise and
-resubmit at Entrepreneurship Theory &amp; Practice)</p>
+<!-- Zhong, W., X. Yi, Z. Ma, and Y. Zhang. Female-inclusive TMT and Firm Innovation. (Under the 1st round revise and resubmit at Strategic Management Journal) -->
 <p>Zhang, Y., and Brian Wu. Task-relevant Data for Management: Evidence
-from Agriculture. (Preparing for submission)</p>
+from Agriculture. (Under review)</p>
 </div>
 
 
