--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>Welcome</title>
 
-<script src="site_libs/header-attrs-2.17/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
@@ -32,8 +32,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.2.1/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.2.1/css/v4-shims.min.css" rel="stylesheet" />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -278,10 +278,10 @@ $(document).ready(function () {
 </div>
 
 
-<p><font size="4"> Yuchen Zhang is an associate professor (with tenure) at <span
-style="color:green">Tulane University</span>, and an alumnus of the
-<span style="color:darkblue">Pennsylvania State University</span> and
-the <span style="color:darkgoldenrod">University of Colorado
+<p><font size="4"> Yuchen Zhang is an associate professor (with tenure)
+at <span style="color:green">Tulane University</span>, and an alumnus of
+the <span style="color:darkblue">Pennsylvania State University</span>
+and the <span style="color:darkgoldenrod">University of Colorado
 Boulder</span>.</p>
 <p><a href="https://www.dropbox.com/s/opx6zx1u9nt950l/YuchenZhang_CV.pdf?dl=0">Curriculum
 Vitae</a> </font></p>
