--- a/Research.html
+++ b/Research.html
@@ -311,14 +311,14 @@ and innovation.</p>
 </div>
 <div id="refereed-publications" class="section level3">
 <h3>Refereed Publications</h3>
-<p>H. Jiang, Y. Zhang, and J. Jiao. A Recombinant Framework of
-Technological Information Disclosure and Reward-Based Crowdfunding
-Performance of Technology Projects. (Forthcoming) Entrepreneurship
-Theory &amp; Practice.</p>
+<p>H. Jiang, Y. Zhang, and J. Jiao. (Forthcoming) A Recombinant
+Framework of Technological Information Disclosure and Reward-Based
+Crowdfunding Performance of Technology Projects. Entrepreneurship Theory
+&amp; Practice.</p>
 <p>Cheng, S.F., P. Lin, Y. Tan, and Y. Zhang (Equal Contribution and
-Alphabetical Order). (Forthcoming) “High” Innovators? Marijuana
-Legalization and Regional Innovation. Production and Operations
-Management, 32(3), 685-703.</p>
+Alphabetical Order). “High” Innovators? Marijuana Legalization and
+Regional Innovation. Production and Operations Management, 32(3),
+685-703.</p>
 <p>Zhang, Y., and W. Yang. (2022) Breakthrough Invention and Problem
 Complexity: Evidence from a Quasi-Experiment. Strategic Management
 Journal, 43(12), 2510-2544.</p>
