--- a/Research.html
+++ b/Research.html
@@ -316,8 +316,8 @@ Framework of Technological Information Disclosure and Reward-Based
 Crowdfunding Performance of Technology Projects. Entrepreneurship Theory
 &amp; Practice.</p>
 <p>Cheng, S.F., P. Lin, Y. Tan, and Y. Zhang (Equal Contribution and
-Alphabetical Order). “High” Innovators? Marijuana Legalization and
-Regional Innovation. Production and Operations Management, 32(3),
+Alphabetical Order). (2023) “High” Innovators? Marijuana Legalization
+and Regional Innovation. Production and Operations Management, 32(3),
 685-703.</p>
 <p>Zhang, Y., and W. Yang. (2022) Breakthrough Invention and Problem
 Complexity: Evidence from a Quasi-Experiment. Strategic Management
