--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ of Colorado Boulder</span>.</p>
 Vitae</a></p>
 <p></font></p>
 <p style="text-align: left; color:grey">
-This site was last updated on
+Last update:
 <script>document.write(new Date().toLocaleDateString())</script>
 </p>
 <!-- Default Statcounter code for github_personal_site
