--- a/Research.html
+++ b/Research.html
@@ -315,7 +315,7 @@ and innovation.</p>
 Framework of Technological Information Disclosure and Reward-Based
 Crowdfunding Performance of Technology Projects. Entrepreneurship Theory
 &amp; Practice.</p>
-<p>Cheng, S.F., P. Lin, Y. Tan, and Y. Zhang (Equal Contribution and
+<p>Cheng, S.F., P. Lin, Y. Tan, and Y. Zhang. (Equal Contribution and
 Alphabetical Order). (2023) “High” Innovators? Marijuana Legalization
 and Regional Innovation. Production and Operations Management, 32(3),
 685-703.</p>
