--- a/Research.html
+++ b/Research.html
@@ -349,8 +349,8 @@ insights. Journal of Economics and Management Strategy, 27(3),
 <p>Han, N., Y. Zhang, and T. Tong. Appropriability Risk and Knowledge
 Search. (Under review at Research Policy)</p>
 <!-- Zhong, W., X. Yi, Z. Ma, and Y. Zhang. Female-inclusive TMT and Firm Innovation. (Under the 1st round revise and resubmit at Strategic Management Journal) -->
-<p>Zhang, Y., and Brian Wu. Task-relevant Data for Management: Evidence
-from Agriculture. (Under review)</p>
+<p>Zhang, Y., and Brian Wu. Government Data and Agriculture Productivity: Evidence
+from the National Agriculture Imagery Program. (pending submission)</p>
 </div>
 
 <!DOCTYPE html>
